ui: fix page height+scrolling on tablet and mobile

--- a/app/src/App.scss
+++ b/app/src/App.scss
@@ -82,7 +82,7 @@
 html,
 body,
 #root {
-  min-height: 100vh;
+  background-color: #252f4a;
   width: 100%;
   min-width: 1024px;
 }
